[package]
name = "graphalgs"
version = "0.0.6"
authors = ["PrototypeRailGun <52821033+PrototypeRailGun@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description="Graph algorithms based on the Rust 'petgraph' library."
readme = "README.md"
homepage="https://github.com/PrototypeRailGun/graphalgs"
repository="https://github.com/PrototypeRailGun/graphalgs"

[lib]
name = "graphalgs"
bench = false

[dependencies]
petgraph = "0.6.2"
nalgebra = "0.25.1"
rand = "0.8.3"
num-traits = "0.2.14"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
