[package]
name = "graphalgs"
version = "0.2.0"
authors = ["starovoid"]
edition = "2021"
license = "MIT"
description="Graph algorithms based on the Rust 'petgraph' library."
readme = "README.md"
homepage="https://github.com/starovoid/graphalgs"
repository="https://github.com/starovoid/graphalgs"

[lib]
name = "graphalgs"
bench = false

[dependencies]
petgraph = "0.7"
nalgebra = "0.33"
rand = "0.8"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
